syntax = "proto3";
package pannier;
// Définition du message TV show
message pannier {
string id = 1;
string title = 2;
string description = 3;
// Ajouter d'autres champs de données pour les séries TV au besoin
}
// Définition des messages de requête et de réponse pour les méthodes
message GetpannierRequest {
string tv_show_id = 1;
}
message GetpannierResponse {
pannier tv_show = 1;
}
message SearchpanniersRequest {
string query = 1;
}
message SearchpanniersResponse {
repeated pannier tv_shows = 1;
}
// Définition du service de séries TV
service pannierService {
rpc Getpannier(GetpannierRequest) returns (GetpannierResponse);
rpc Searchpanniers(SearchpanniersRequest) returns (SearchpanniersResponse);

}